// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login page Snapshot test login page Snapshot test 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../img/login_background.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="loginroot"
  />
  <Image
    source={
      Object {
        "testUri": "../../../img/login_icon.png",
      }
    }
    testID="loginimage"
  />
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#01A3AE",
        "height": 50,
        "justifyContent": "center",
        "marginTop": 40,
        "opacity": 1,
        "width": 250,
      }
    }
    testID="loginbutton"
  >
    <Text
      style={
        Object {
          "color": "white",
        }
      }
      testID="logintext"
    >
      LOGIN TO FEEDLY
    </Text>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#AAAAAA",
        "height": 50,
        "justifyContent": "center",
        "marginTop": 8,
        "opacity": 1,
        "width": 250,
      }
    }
    testID="trybutton"
  >
    <Text
      style={
        Object {
          "color": "white",
        }
      }
      testID="trytext"
    >
      TRY THINGS OUT
    </Text>
  </View>
</View>
`;

exports[`login page shallow test login page shallow test 1`] = `
<ImageBackground
  source={
    Object {
      "testUri": "../../../img/login_background.png",
    }
  }
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
  testID="loginroot"
>
  <Image
    source={
      Object {
        "testUri": "../../../img/login_icon.png",
      }
    }
    testID="loginimage"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 50,
          "justifyContent": "center",
          "width": 250,
        },
        Object {
          "backgroundColor": "#01A3AE",
          "marginTop": 40,
        },
      ]
    }
    testID="loginbutton"
  >
    <Component
      style={
        Object {
          "color": "white",
        }
      }
      testID="logintext"
    >
      LOGIN TO FEEDLY
    </Component>
  </TouchableOpacity>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 50,
          "justifyContent": "center",
          "width": 250,
        },
        Object {
          "backgroundColor": "#AAAAAA",
          "marginTop": 8,
        },
      ]
    }
    testID="trybutton"
  >
    <Component
      style={
        Object {
          "color": "white",
        }
      }
      testID="trytext"
    >
      TRY THINGS OUT
    </Component>
  </TouchableOpacity>
</ImageBackground>
`;
